--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "css-loader": "^0.24.0",
     "eslint": "^3.4.0",
     "eslint-plugin-react": "^6.2.0",
+    "file-loader": "^0.11.1",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   }
