--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^3.1.2",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
@@ -35,7 +36,9 @@
     "eslint-plugin-react": "^6.2.0",
     "file-loader": "^0.11.1",
     "react-hot-loader": "^1.3.0",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
+    "typescript": "^2.2.2",
     "url-loader": "^0.5.8",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
