--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Danny Lee, Mackenzie Pletcher, Meera Limaye, Sim Singh",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^3.7.6",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
@@ -38,7 +39,6 @@
     "react-hot-loader": "^1.3.0",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
-    "typescript": "^2.2.2",
     "url-loader": "^0.5.8",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
