finished userstore and eventstore

--- a/devoursvr/models/db/Dockerfile
+++ b/devoursvr/models/db/Dockerfile
@@ -1,5 +1,5 @@
 FROM postgres
 # this is the name of the pg
-ENV POSTGRES_DB pg2
+ENV POSTGRES_DB devourpg
 COPY *.sql /docker-entrypoint-initdb.d/
 
